fixed vmt percent wrap bug

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -246,7 +246,7 @@ button {
 }
 
 .statistic .label {
-  width: 60%;
+  width: 50%;
   color: inherit;
   font-size: 0.8em;
 }
